--- a/package.json
+++ b/package.json
@@ -18,10 +18,11 @@
     "@babel/core": "^7.26.0",
     "@babel/preset-env": "^7.26.0",
     "@babel/preset-react": "^7.16.7",
-    "@testing-library/react": "^13.1.1",
+    "@testing-library/dom": "^10.4.0",
+    "@testing-library/react": "^16.0.1",
     "@types/jest": "^29.5.14",
-    "@types/react": "^18.0.0",
-    "@types/react-dom": "^18.0.0",
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^1.3.0",
     "babel-jest": "^29.7.0",
     "jest": "^28.0.1",
